# KafkaRealtimeDashboard

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  architecture.excalidraw  comparison.md  docker-compose.full.yml  docker-compose.network.yml  docker-compose.yml  presentation-script.md  presentation.m4a  run.sh  technology-stack-comparison.md
.github/workflows/: main.yml  rust.yml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx  types.ts
frontend/src/components/: BrokerConfig.tsx  ChartView.tsx  ConnectionStatus.tsx  GridLayout.tsx  LayoutManager.tsx  MessageList.tsx  MosaicLayout.tsx  SearchResultsPanel.tsx  TabsLayout.tsx  TopicSelector.tsx  TopicWindow.tsx
frontend/src/contexts/: MessageTrackingContext.tsx
frontend/src/hooks/: useKafkaStream.ts  useTopics.ts
frontend/src/styles/: index.css
k8s/: README.md  cleanup.sh  deploy.sh  namespace.yaml
k8s/dashboard/: dashboard-configmap.yaml  dashboard-deployment.yaml  dashboard-service.yaml
k8s/kafka/: kafka-configmap.yaml  kafka-service-headless.yaml  kafka-service.yaml  kafka-statefulset.yaml
k8s/seed/: seed-configmap.yaml  seed-deployment.yaml
memory/: memory-KafkaDashboard.md  plan-KafkaDashboard.md
scripts/: seed-topics.sh
src/: config.rs  error.rs  main.rs  models.rs
src/handlers/: broker.rs  mod.rs  seek.rs  topics.rs  ws.rs
src/kafka/: admin.rs  consumer.rs  mod.rs
tests/: integration_tests.rs
