[package]
name = "kafka-dashboard"
version = "0.2.0"
edition = "2021"
description = "Real-time Kafka topic monitoring dashboard"

[features]
default = ["static-kafka"]
static-kafka = ["rdkafka/cmake-build", "rdkafka/ssl"]
dynamic-kafka = ["rdkafka/dynamic-linking", "rdkafka/ssl"]

[dependencies]
actix-web = "4"
actix-ws = "0.3"
actix-files = "0.6"
actix-cors = "0.7"
actix-rt = "2"
rdkafka = "0.37"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-actix-web = "0.7"
